	- Added logic to validate custom reports before they are run
	- Added -o commandline option to validate the report configuration in the .rc file and exit the program. Useful when developing custom reports.
	- Added -y commandline option to specify which reports to run at runtime. This enables more dynamic report running
	- Created separate "no activity" report instead of including that in the standard report output. This can now be added or left off the report run at will
	- Created separate "lastseen" report to display the last seen backup date & time for each backupset. Replaces the [report]lastseen= option in the .rc file
- Database, .rc file, and log file specification can now be either directory names or full path specifications (Issue #136)
- Can now send output to JSON file (Issue #135)
- Changed displaysize option in .rc file from (mega/giga) to (none/mb/gb), deprecated the showdisplaysize option, and changed the -s option to -s none|mb|gb
- Re-structured the documentation for better readibility and made it easier to find specific settings. (Issue #140)
- Ability to specify multiple inbound (IMAP/POP3) and outbound (SMTP) email servers. Specified by [main]emailservers= option or -e commandline option.
- Standardized log format for easier searching and organization (Issue #137)
- Added ability to send output to syslog server or log aggregator (Issue #128)

2.2.11
------
- Fix SMTP connection bug for some email services (Issue #129)

2.2.10
------
- Try again to fix obscure parsing bug when job messages contain quotes (Issue #126)

2.2.9
-----
- Fix obscure parsing bug when job messages contain quotes (Issue #126)

2.2.8
-----
- Properly handle reports where Duplicati version is not parsed from emails (Issue #123)
- Added [incoming]unreadonly option to only process unread messages. Will dramatically speed up processing. (Issue #124)

2.2.7
-----
- Properly parse "Log data" field, newly introduced in Duplicati circa November 2018 (Issue #112)